--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 </head>
 <body>
     <p>
-        Hola estudiantes este es mi sitio web, sígueme en Instagram. Si tienes dudas, pregunta.
+        Hola amigos este es mi sitio web, sígueme en Instagram. Si tienes dudas, preguntame.
         Este es nuevo comentario, chéquenlo. Prueba de fuego.
-        Prueba de las pruebas
-        jajajaj}
-        jajajajjajaja
-        jajajaj
-        jejeje
+        Prueba de las pruebas finales.
+        Segunda actualización.
         
+
     </p>
 </body>
 </html>
